--- a/src/context/modal.css
+++ b/src/context/modal.css
@@ -20,6 +20,8 @@
     color: white;
     box-shadow: 0 8px 16px rgba(0,0,0,0.2);
     animation: modalPop 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    border: 1px dashed color-mix(in srgb, var(--accent-primary), transparent 20%);
+    background-clip: padding-box;
 }
 
 @keyframes modalPop {
@@ -40,4 +42,31 @@
 .modal-error {
     text-align: right;
     margin-top: -10px;
+}
+
+.context-menu-out {
+  background: var(--bg-alt);
+  border: 1px dashed var(--accent-primary);
+  border-radius: 10px;
+}
+
+.context-menu-out .button {
+    cursor: pointer;
+    color: var(--text-main);
+    transition: 0.3s all;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+
+}
+
+.context-menu-out .button:hover {
+    background: var(--bg-dark-alt);
+    color: white; /* Should this be anything else we already have.. if this works well against bg-dark-alt..? */
+}
+
+.context-menu-out hr {
+    background: none;
+  border: 1px solid var(--bg-panel);
+  margin: 0px;
 }
