Make loading text centered + add panic button
Panic being it failed to load do you want to clear it as your selected instance?

--- a/src/App.css
+++ b/src/App.css
@@ -171,6 +171,7 @@ body {
   color: white;
   text-align: center;
   animation: breathing 1.5s ease-in-out infinite;
+  min-height: 100vh;
 }
 
 .spinner {
