--- a/src/App.css
+++ b/src/App.css
@@ -278,7 +278,6 @@ html, body, #root, .page-wrapper {
 
 
 #channels-column {
-    width: 240px;
     background-color: var(--bg-sidebar);
     border-right: 1px solid var(--border-color);
     display: flex;
@@ -343,6 +342,7 @@ html, body, #root, .page-wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
 }
 
 .user-info .name {
