--- a/src/components/chat/chatArea.css
+++ b/src/components/chat/chatArea.css
@@ -11,15 +11,17 @@
   overflow-y: auto;
   padding: 20px;
   overflow-anchor: none;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
 .chat-input-area {
-  padding: 0 20px 30px 20px;
+  padding: 0 20px 30px;
   flex-shrink: 0;
 }
 
 .no-messages {
-  color: var(--bg-offline);
   background: #1a1d2296;
   border-radius: 20px;
   padding: 10px;
@@ -36,16 +38,17 @@
   background-color: #1a1d2296; /* Make this a variable */
   border-radius: 8px;
   padding: 10px 16px;
-  display: flex;
   align-items: center;
   border: 1px solid var(--border-color);
+  display: flex;
+  flex-direction: column;
 }
 
 .attachment-shelf {
   gap: 12px;
   padding: 10px 0;
   margin-bottom: 5px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+  border-bottom: 1px solid rgb(255 255 255 / 5%);
   overflow-x: auto;
   display: flex;
   width: 100%;
@@ -57,11 +60,6 @@
   border-radius: 4px;
   padding: 8px;
   flex-shrink: 0;
-}
-
-.input-wrapper {
-  display: flex;
-  flex-direction: column;
 }
 
 .attachment-preview {
@@ -83,13 +81,13 @@
 .attachment-remove {
   position: absolute;
   top: -8px;
-  right: 0px;
+  right: 0;
   background: var(--bg-dnd);
   color: white;
   border-radius: 4px;
   padding: 6px;
   cursor: pointer;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /*Var */
+  box-shadow: 0 2px 4px rgb(0 0 0 / 50%); /* Var */
   width: 20px;
   text-align: center;
   user-select: none;
@@ -152,16 +150,6 @@
   margin-top: auto;
 }
 
-.messages-scroller {
-  flex: 1;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  gap: 8px;
-  overflow-anchor: none;
-}
-
 .message-group {
   display: flex;
   margin-top: 1.0625rem;
@@ -169,9 +157,13 @@
   gap: 16px;
 }
 
+.message-sub {
+  padding: 0 0 0 55px;
+}
+
 .message-group:hover,
 .message-sub:hover {
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgb(0 0 0 / 5%);
 }
 
 .message-avatar {
@@ -217,10 +209,6 @@
   margin-bottom: -10px;
 }
 
-.message-sub {
-  padding: 0px 0px 0px 55px;
-}
-
 .typing-status-wrapper {
   position: absolute;
   bottom: 8px;
@@ -234,7 +222,7 @@
   color: #dbdee1;
   margin: 0;
   line-height: 16px;
-  animation: fadeIn 0.2s ease-in-out alternate;
+  animation: fade-in 0.2s ease-in-out alternate;
 }
 
 .typing-status-wrapper strong {
@@ -242,11 +230,12 @@
   font-weight: 600;
 }
 
-@keyframes fadeIn {
+@keyframes fade-in {
   from {
     opacity: 0;
     transform: translateY(-2px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
