--- a/src/components/chat/memberList.css
+++ b/src/components/chat/memberList.css
@@ -21,7 +21,7 @@
 }
 
 .role-title {
-  padding: 10px 0px 10px 10px;
+  padding: 10px 0 10px 10px;
   color: var(--accent-primary);
   text-transform: uppercase;
   font-size: 14px;
@@ -46,7 +46,7 @@
   border-radius: 6px;
   object-fit: cover;
   border: 1px solid var(--border-color);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 4px rgb(0 0 0 / 20%);
 }
 
 .status-dot {
@@ -72,12 +72,15 @@
 .online {
   background-color: var(--bg-online);
 }
+
 .idle {
   background-color: var(--bg-idle);
 }
+
 .dnd {
   background-color: var(--bg-dnd);
 }
+
 .offline {
   background-color: var(--bg-offline);
 }
@@ -118,6 +121,7 @@
     transform: scale(0);
     opacity: 0.3;
   }
+
   40% {
     transform: scale(1);
     opacity: 1;
@@ -130,8 +134,7 @@
   width: 300px;
   background: var(--bg-alt);
   border-radius: 8px;
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
+  box-shadow: 0 8px 16px rgb(0 0 0 / 30%);
   z-index: 1000;
   border: 1px solid var(--accent-primary);
   overflow: hidden;
@@ -146,6 +149,9 @@
 
 .user-details-centered {
   padding-top: 4px;
+  display: flex;
+  align-content: center;
+  align-items: center;
 }
 
 .avatar-wrapper-centered.overlap {
@@ -178,12 +184,6 @@
   height: 80px;
   border-radius: 50%;
   border: 4px solid var(--bg-alt);
-}
-
-.user-details-centered {
-  display: flex;
-  align-content: center;
-  align-items: center;
 }
 
 .user-details-centered .username {
@@ -244,14 +244,14 @@
   border-radius: 8px;
 }
 
+.role-removal-button:hover {
+  background-color: rgb(255 255 255 / 10%);
+  color: var(--accent-primary);
+}
+
 .role-pill:hover .role-removal-button {
   right: 4px;
   opacity: 1;
-}
-
-.role-removal-button:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-  color: var(--accent-primary);
 }
 
 .role-removal-button svg {
@@ -265,8 +265,9 @@
   border-top: 1px solid green;
   border-right: 1px solid green;
 }
+
 .role-green {
-  border-color: green !important;
+  border-color: green;
 }
 
 .add-role-button {
@@ -315,7 +316,7 @@
   font-size: 12px;
   font-weight: 500;
   color: var(--text-muted);
-  background: rgba(255, 255, 255, 0.05);
+  background: rgb(255 255 255 / 5%);
   padding: 1px 6px;
   border-radius: 4px;
   text-transform: lowercase;
@@ -330,7 +331,7 @@
 
 .about-me-container > p {
   font-size: 16px;
-  word-wrap: break-word;
+  overflow-wrap: break-word;
 }
 
 .avatar-img-large:hover {
