--- a/src/context/modal.css
+++ b/src/context/modal.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.85);
+  background: rgb(0 0 0 / 85%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -17,18 +17,19 @@
   border-radius: 8px;
   padding: 28px;
   color: white;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  animation: modalPop 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  box-shadow: 0 8px 16px rgb(0 0 0 / 20%);
+  animation: modal-pop 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   background: var(--bg-alt);
   border: 1px dashed color-mix(in srgb, var(--accent-primary), transparent 20%);
   background-clip: padding-box;
 }
 
-@keyframes modalPop {
+@keyframes modal-pop {
   from {
     transform: scale(0.9);
     opacity: 0;
   }
+
   to {
     transform: scale(1);
     opacity: 1;
@@ -40,7 +41,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: var(--bg-dark-alt);
-  margin: 28px -28px -28px -28px;
+  margin: 28px -28px -28px;
   padding: 16px 28px;
   border-radius: 0 0 8px 8px;
 }
@@ -73,7 +74,7 @@
 .context-menu-out hr {
   background: none;
   border: 1px solid var(--bg-panel);
-  margin: 0px;
+  margin: 0;
 }
 
 .modal-container.modal-container-profile {
