--- a/src/components/chat/settings.css
+++ b/src/components/chat/settings.css
@@ -149,11 +149,11 @@
   width: 100px;
 }
 
-.close-button-wrapper {
+.close-btn-wrapper {
   padding: 60px 20px;
 }
 
-.close-button {
+.close-btn {
   cursor: pointer;
   text-align: center;
   position: absolute;
@@ -178,7 +178,7 @@
   margin-bottom: 4px;
 }
 
-.close-button:hover .close-circle {
+.close-btn:hover .close-circle {
   background-color: var(--bg-sidebar);
 }
 
