fix(style): fix member list and settings visual bug
still not figure out how to make the chat area size intact, it sometimes disappears.

--- a/src/components/chat/settings.css
+++ b/src/components/chat/settings.css
@@ -29,6 +29,8 @@
 }
 
 .sidebar-item {
+  display: block;
+  width: 100%;
   color: #b5bac1; /* Make this a var */
   padding: 8px;
   margin-bottom: 2px;
@@ -130,7 +132,7 @@
   margin-bottom: 20px;
 }
 
-.field-group label {
+.field-title {
   display: block;
   color: var(--accent-primary);
   font-size: 12px;
