--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   --bg-panel: #1f2335;
   --accent-primary: #bb9af7;
   --accent-secondary: #7aa2f7;
+  --footer-slash: #a274f4;
   --text-main: #a9b1d6;
   --text-bright: #c0caf5;
   --bg-bright: #e5e4d9;
@@ -99,11 +100,9 @@ body {
 .brand span {
   font-weight: 800;
   letter-spacing: 2px;
-  color: var(--text-main);
-  font-size: 14px;
+  color: var(--accent-primary);
   border: 1px dashed var(--accent-primary);
   padding: 5px;
-  opacity: 0.6;
 }
 
 .login-link {
@@ -127,13 +126,63 @@ body {
   font-family: sans-serif;
 }
 
+.credits-shape {
+  clip-path: polygon(
+    0% 0%,
+    3% 3.1%,
+    6% 6.2%,
+    9% 9.3%,
+    12% 12.4%,
+    15% 15.5%,
+    18% 18.6%,
+    21% 21.7%,
+    24% 24.8%,
+    27% 27.9%,
+    30% 31%,
+    33% 34.1%,
+    36% 37.2%,
+    39% 40.3%,
+    42% 43.4%,
+    45% 46.5%,
+    48% 49.6%,
+    51% 52.7%,
+    54% 55.8%,
+    57% 58.9%,
+    60% 62%,
+    63% 65.1%,
+    66% 68.2%,
+    69% 71.3%,
+    72% 74.4%,
+    75% 77.5%,
+    78% 80%,
+    81% 77.5%,
+    84% 75%,
+    87% 72.5%,
+    90% 70%,
+    93% 67.5%,
+    96% 65%,
+    99% 62.5%,
+    100% 62%,
+    100% 100%,
+    0% 100%
+  );
+  background: var(--footer-slash);
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  height: 600px;
+}
+
 .credits span {
   display: block;
   letter-spacing: 0.5px;
+  color: black;
+  font-size: 14px;
+  font-weight: 400;
 }
 
 .credits .login-link {
-  color: var(--accent-primary);
+  color: white;
   text-decoration: none;
   font-weight: 600;
   transition: color 0.2s ease;
